gccida/g0/immed_double_const
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/varasm.c:2569:50: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  immed_double_const( __int64 i0, __int64 i1, machine_mode mode) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/varasm.c:2572:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/varasm.c:2582:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT || mode_class_0[mode] == MODE_PARTIAL_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/varasm.c:2582:40: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT || mode_class_0[mode] == MODE_PARTIAL_INT ) 
                                       ^~~~~~~~~~~~
                                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/varasm.c:2620:10: error: invalid operands to binary expression ('long long' and 'struct rtx_def')
if ( i0a == r[1] && i1a == r[1].fld[0].rtwint && modea == *( ( unsigned __int8 *)r + 2) ) 
     ~~~ ^  ~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/immed_double_const/src/obj/varasm.o] Error 1
